// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ProgressStep /> > should match the snapshot for 8 items 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="SliderProgress_root__17uw35s0"
    style="grid-template-columns: repeat(8, 1fr);"
  >
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju8v SliderProgress_step__17uw35s1"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_none_mobile__onxwju6v sprinkles_backgroundColor_white__onxwju4q ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_white__onxwju4q ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3 ProgressStep_passed__15qfq7e6"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju8v SliderProgress_step__17uw35s1"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_white__onxwju4q ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_white__onxwju4q ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3 ProgressStep_active__15qfq7e4"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju8v SliderProgress_step__17uw35s1"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_white__onxwju4q ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_none_mobile__onxwju6v sprinkles_backgroundColor_white__onxwju4q ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju8v SliderProgress_step__17uw35s1"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_white__onxwju4q ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_none_mobile__onxwju6v sprinkles_backgroundColor_white__onxwju4q ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju8v SliderProgress_step__17uw35s1"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_white__onxwju4q ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_none_mobile__onxwju6v sprinkles_backgroundColor_white__onxwju4q ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju8v SliderProgress_step__17uw35s1"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_white__onxwju4q ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_none_mobile__onxwju6v sprinkles_backgroundColor_white__onxwju4q ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju8v SliderProgress_step__17uw35s1"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_white__onxwju4q ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_none_mobile__onxwju6v sprinkles_backgroundColor_white__onxwju4q ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju8v SliderProgress_step__17uw35s1"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_white__onxwju4q ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_none_mobile__onxwju6v sprinkles_backgroundColor_white__onxwju4q ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
        style="animation-duration: 1s;"
      />
    </div>
  </div>
</div>
`;

exports[`<ProgressStep /> > should match the snapshot with custom background 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="SliderProgress_root__17uw35s0"
    style="grid-template-columns: repeat(3, 1fr);"
  >
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju8v SliderProgress_step__17uw35s1"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_none_mobile__onxwju6v sprinkles_backgroundColor_yellow500__onxwju4c ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_yellow500__onxwju4c ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3 ProgressStep_passed__15qfq7e6"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju8v SliderProgress_step__17uw35s1"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_yellow500__onxwju4c ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_yellow500__onxwju4c ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3 ProgressStep_active__15qfq7e4"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju8v SliderProgress_step__17uw35s1"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_yellow500__onxwju4c ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_none_mobile__onxwju6v sprinkles_backgroundColor_yellow500__onxwju4c ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
        style="animation-duration: 1s;"
      />
    </div>
  </div>
</div>
`;
